# Harry-Potter-Book-Writing-via-Multi-Agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: Harry_Potter's_Life_as_an_Auror.md
src/write_a_book_with_flows/: main.py  typecast.py
src/write_a_book_with_flows/crews/outline_book_crew/: outline_crew.py
src/write_a_book_with_flows/crews/outline_book_crew/config/: agents.yaml  tasks.yaml
src/write_a_book_with_flows/crews/write_book_chapter_crew/: write_book_chapter_crew.py
src/write_a_book_with_flows/crews/write_book_chapter_crew/config/: agents.yaml  tasks.yaml
