[project]
name = "write_a_book_with_flows"
version = "0.1.0"
description = "write_a_book_with_flows using crewAI"
authors = [{ name = "Raghvendra Mall", email = "raghvendramall@ieee.org" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
write_a_book_with_flows = "write_a_book_with_flows.main:run"
run_crew = "write_a_book_with_flows.main:run"
train = "write_a_book_with_flows.main:train"
replay = "write_a_book_with_flows.main:replay"
test = "write_a_book_with_flows.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
